# MSTree_Phylogeny

./: .gitignore  CMakeLists.txt  IMPLEMENTATION_PLAN_MDL_INSERTION.md  README.md  TESTING.md
include/: algorithm2.h  alignment_utils.h  bionj.h  clnj.h  distance.h  distance_oracle.h  fasta_parser.h  iqtree_interface.h  kmer_distance.h  mdl_clustering.h  mfnj.h  mlvmst.h  nj.h  one_hot.h  online_insertion.h  pipeline.h  tree_analysis.h  tree_state.h  types.h
scripts/: create_github_repo_and_push.sh
src/: algorithm2.cpp  alignment_utils.cpp  bionj.cpp  clnj.cpp  distance.cpp  distance_oracle.cpp  fasta_parser.cpp  iqtree_interface.cpp  kmer_distance.cpp  main.cpp  mdl_clustering.cpp  mfnj.cpp  mlvmst.cpp  nj.cpp  one_hot.cpp  online_insertion.cpp  pipeline.cpp  tree_analysis.cpp  tree_state.cpp
tests/: validate_insertion.sh
